added reference to the github repo for the case studies in the text (Results)

--- a/review1_drones2026-02/drones-4134001-done-x_version1/drones-4134001-done.tex
+++ b/review1_drones2026-02/drones-4134001-done-x_version1/drones-4134001-done.tex
@@ -357,6 +357,7 @@ def GLI(img, channels):
 \label{results}
 
 To illustrate how to use \textsc{drone2report} for image processing from drone phenotyping, and to show some potential and useful applications of vegetation indices, we present five case studies: i) thresholding; ii) evolution of vegetation indices over time; iii) analysis of height; iv) combining multiple sensors and index optimization; v) leveraging a deep neural network for image classification. 
+The code and data to reproduce these case studies can be found at \url{https://github.com/ne1s0n/paper-drone2report}.
 We emphasize that the presented case studies are not original research work, but mere examples of possible uses of \textsc{drone2report}.
 
 \subsection{Case Study N. 1: Thresholding}
